deploy/yamls-parameterized/kustomize/base/docker-node-mongo-starter-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: docker-node-mongo-starter
    name: docker-node-mongo-starter
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: docker-node-mongo-starter
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: docker-node-mongo-starter
            name: docker-node-mongo-starter
        spec:
            containers:
                - image: quay.io/myproject/docker-node-mongo-starter:latest
                  imagePullPolicy: Always
                  name: docker-node-mongo-starter
                  ports:
                    - containerPort: 8080
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
