deploy/yamls-parameterized/kustomize/base/docker-node-mongo-starter-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: docker-node-mongo-starter
    name: docker-node-mongo-starter
spec:
    ports:
        - name: port-8080
          port: 8080
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: docker-node-mongo-starter
    type: ClusterIP
status:
    loadBalancer: {}

...
