deploy/yamls-parameterized/kustomize/base/my-app-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: my-app
    name: my-app
spec:
    ports:
        - name: port-8080
          port: 8080
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: my-app
    type: ClusterIP
status:
    loadBalancer: {}

...
