deploy/yamls-parameterized/kustomize/base/myproject-ingress.yaml

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: myproject.com
          http:
            paths:
                - backend:
                    serviceName: docker-node-mongo-starter
                    servicePort: port-8080
                  path: /docker-node-mongo-starter
                  pathType: Prefix
                - backend:
                    serviceName: my-app
                    servicePort: port-8080
                  path: /my-app
                  pathType: Prefix
status:
    loadBalancer: {}

...
